--- a/accordéon/style.css
+++ b/accordéon/style.css
@@ -12,7 +12,7 @@ body{
     font-size: 1.4rem;/* soit 14px*/
     font-family: arial;
 }
-.container{
+.container_accordeon{
     background-color: #eee;
     height: 100vh;
     display: flex;
