add challenge pokemon
ajout du challenge pokemon via une aip et un modale

--- a/projects/ws/Pokemon/style.css
+++ b/projects/ws/Pokemon/style.css
@@ -94,3 +94,24 @@ body {
   .hidden {
     display: none;
   }
+
+  @keyframes shake {
+    0% {
+        transform: translateX(0);
+    }
+    25% {
+        transform: translateX(10%);
+    }
+    50% {
+        transform: translateX(-10%);
+    }
+    75% {
+        transform: translateX(0);
+    }
+
+    100% {
+      transform: translateX(0%);
+  }
+}
+
+
