--- a/projects/frontendMentor/newsletter-sign-up-with-success-message-main/style.css
+++ b/projects/frontendMentor/newsletter-sign-up-with-success-message-main/style.css
@@ -227,3 +227,48 @@ body{
     color: #fff;
     cursor: pointer;
 }
+
+.right > div{
+    width: 90%;
+    height: 100%;
+    min-height: 100%;
+
+    background: url('/projects/frontendMentor/newsletter-sign-up-with-success-message-main/assets/images/illustration-sign-up-desktop.svg');
+    background-size: cover;
+    background-repeat: no-repeat;
+
+    border-radius: 15px;
+}
+
+@media (max-width: 765px){
+	.index-container{
+		width: 100%;
+        height: 100%;
+		flex-direction: column;
+	}
+    .left{
+		display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100%;
+        width: 95%;
+        order: 2;
+	}
+    .left-header{    
+        margin: 0;
+    }
+
+    .right > div {
+        display: none;
+    }
+    .right {
+        background: url('/projects/frontendMentor/newsletter-sign-up-with-success-message-main/assets/images/illustration-sign-up-mobile.svg');
+        background-size: cover;
+        background-repeat: no-repeat;
+        width: 100%;
+        height: 50%;
+        order: 1;
+
+        border-radius: 0px 0px 15px 15px;
+    }
+}
