--- a/projects/frontendMentor/qr-code-component-main/style.css
+++ b/projects/frontendMentor/qr-code-component-main/style.css
@@ -24,8 +24,8 @@ body{
 }
 
 .container{
-	width: 18%;
-	height: 50%;
+    width: 300px;
+    height: 500px;
 
 	background-color: hsl(0, 0%, 100%);
 
