--- a/projects/frontendMentor/profile-card-component-main/style.css
+++ b/projects/frontendMentor/profile-card-component-main/style.css
@@ -92,6 +92,7 @@ footer{
     height: 20%;
     width: 70%;  
     display: flex; 
+    justify-content: center;
     text-align: center;
     gap: 30px;
 }
