--- a/projects/ws/OtanConvert/style.css
+++ b/projects/ws/OtanConvert/style.css
@@ -21,8 +21,8 @@ body{
 }
 
 .container{
-    height: 50%;
-    width: 20%;
+    height: 380px;
+    width: 370px;
     
     background-color: #FFF;
 
