--- a/projects/ws/AdviceGenerator/style.css
+++ b/projects/ws/AdviceGenerator/style.css
@@ -14,8 +14,6 @@ body{
     padding: 0;
 }
 
-
-
 .container{
     width: 100%;
     height: 100%;
@@ -31,8 +29,8 @@ body{
     background-color: #323A49;
     border-radius: 15px;
 
-    width: 37.5%;
-    height: 40%;
+	height: 380px;
+	width: 375px;
 
     display: flex;
     flex-direction: column;
@@ -58,10 +56,10 @@ body{
     color: #CEE3E9;
 
     max-width: 80%;
-    max-height: 30%;
+    max-height: 40%;
 
     min-width: 80%;
-    min-height: 30%;
+    min-height: 40%;
 
     font-family: 'Manrope', sans-serif;
     font-size: 28px;
@@ -117,6 +115,8 @@ input{
     z-index: 999;
 
     cursor: pointer;
+
+    font-size: 18px;
 }
 
 .div-input{
