--- a/projects/frontendMentor/rest-countries-api-with-color-theme-switcher-master/style.css
+++ b/projects/frontendMentor/rest-countries-api-with-color-theme-switcher-master/style.css
@@ -37,13 +37,16 @@ body {
     display: flex;
     flex-direction: column;
 
-    height: 350px;
+    height: 40%;
     width: 325px;
+    min-width: 325px;
 
     width: calc(25% - 150px); /* Définit la largeur de chaque carte */
     margin-bottom: 20px; /* Ajoute un espace entre les cartes sur la même ligne */
     box-shadow: 0px 0px 13px 0px hsl(0, 0%, 52%);
     border-radius: 10px;
+
+    flex: 0 0 calc(25% - 150px);
 }
 
 h2{
@@ -58,8 +61,9 @@ p{
 }
 
 .flag{
-    height: 200px;
-    width: 325px;
+    height: 20%;
+    width: 100%;
+    min-height: 200px;
     border-radius: 10px 10px 0px 0px;
 }
 
@@ -87,11 +91,11 @@ header{
 
 h1{
     margin: 0;
-    margin-left: 180px;
+    margin-left: 9%;
 }
 
 .header-icon-text{
-    margin-right: 180px;
+    margin-right: 9%;
     display: flex;
     gap: 5px;
     align-items: center;
@@ -102,12 +106,11 @@ h1{
     margin-bottom: 50px;
 
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center; 
 }
 
 #search-form{
-    margin-left: 180px;
     width: 500px;
     background-color: hsl(0, 0%, 100%);
     box-shadow: 0px 1px 5px  hsl(0, 0%, 52%);
@@ -126,7 +129,6 @@ h1{
     border: none;
     cursor: pointer;
     width: 200px;
-    margin-right: 180px;
     background-color: hsl(0, 0%, 100%);
     box-shadow: 0px 1px 5px  hsl(0, 0%, 52%);
     padding: 20px 0px 20px 0px;
